# docker-ros-detectron2

./: README.md
catkin_ws/src/detectron2_ros/: CMakeLists.txt  package.xml
catkin_ws/src/detectron2_ros/launch/: detectron2_with_usb_cam.launch
catkin_ws/src/detectron2_ros/scripts/: detectron2_ros.py
docker/: Dockerfile  Makefile  docker-compose.yml
