<?xml version="1.0"?>
<package format="2">
  <name>detectron2_ros</name>
  <version>0.0.0</version>
  <description>The detectron2_ros package</description>
  <maintainer email="nube266@todo.todo">nube266</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <export></export>
</package>